# bigquery_project

./: pyproject.toml
properati_data/: .gitignore  properati_data.parquet.dvc
