[tool.poetry]
name = "bigquery"
version = "0.1.0"
description = "BigQuery Project"
authors = ["Nicolas Amado"]
license = "UN"

[tool.poetry.dependencies]
python = ">3.9"
pandas = "^1.4.2"
jupyter = "^1.0.0"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
